--- a/config.json
+++ b/config.json
@@ -365,5 +365,10 @@
             //zero or negative value means no timeout.
             "timeout": -1.0
         }
-    ]
+    ],
+    "custom_config": {
+        "image-default":"https://github.com/an-tao/drogon/wiki/images/drogon-white.jpg",
+        "jwt-secret":"nRvyYC4soFxBdZ-F-5Nnzz5USXstR1YylsTd-mA0aKtI9HUlriGrtkf-TiuDapkLiUCogO3JOK7kwZisrHp6wA",
+        "jwt-sessionTime":86400
+    }
 }
