添加跟高级别的编译参数优化

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ if (CMAKE_BUILD_TYPE AND (CMAKE_BUILD_TYPE STREQUAL "Debug"))
     set(CMAKE_CXX_FLAGS_DEBUG "-pipe -Wall -O0 -L/usr/local/lib")
     message("Debug mode:${CMAKE_CXX_FLAGS_DEBUG}")
 elseif (CMAKE_BUILD_TYPE AND (CMAKE_BUILD_TYPE STREQUAL "Release"))
-    set(CMAKE_CXX_FLAGS_RELEASE "-pipe -w -Ofast -fomit-frame-pointer -march=native -L/usr/local/lib")
+    set(CMAKE_CXX_FLAGS_RELEASE "-pipe -w -Ofast -fomit-frame-pointer -ffast-math -march=native -mtune=native -fomit-frame-pointer -freorder-blocks -fweb -fno-stack-protector  -finline-functions -fomit-frame-pointer -funroll-loops -L/usr/local/lib")
     message("Release mode:${CMAKE_CXX_FLAGS_RELEASE}")
 else ()
     set(CMAKE_CXX_FLAGS_RELEASE "-pipe -w -Ofast -fomit-frame-pointer -march=native -L/usr/local/lib")
