--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,10 +50,43 @@ elseif (CMAKE_BUILD_TYPE AND (CMAKE_BUILD_TYPE STREQUAL "Release"))
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-use=${CMAKE_SOURCE_DIR}/fprofile")]]
 
     if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm")
-        set(CMAKE_CXX_FLAGS_RELEASE "-pipe -w -Ofast -fomit-frame-pointer -mcpu=native -mtune=native -ftree-vectorize -fopenmp -ftree-parallelize-loops=3 -fipa-pta -freorder-blocks-and-partition -fmerge-all-constants -floop-unroll-and-jam -fno-strict-overflow -fno-tree-loop-distribute-patterns -ffast-math -falign-functions=32 -falign-labels=8 -falign-loops=32 -freorder-blocks -fweb -fno-stack-protector -finline-functions -funroll-loops -L/usr/local/lib -DARM_ARCH")
+        set(CMAKE_CXX_FLAGS_RELEASE "-pipe -w -Ofast -fomit-frame-pointer -mcpu=native -mtune=native \
+        -ftree-vectorize -fopenmp -ftree-parallelize-loops=3 -fipa-pta -freorder-blocks-and-partition \
+        -fmerge-all-constants -floop-unroll-and-jam -fno-strict-overflow -fno-tree-loop-distribute-patterns \
+        -ffast-math -falign-functions=32 -falign-labels=8 -falign-loops=32 -freorder-blocks -fweb \
+        -fno-stack-protector -finline-functions -funroll-loops -L/usr/local/lib -DARM_ARCH")
         message("Release mode for ARM:${CMAKE_CXX_FLAGS_RELEASE}")
     elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "x86")
-        set(CMAKE_CXX_FLAGS_RELEASE "-pipe -w -Ofast -fomit-frame-pointer -mcpu=native -mtune=native -ftree-vectorize -fopenmp -ftree-parallelize-loops=3 -fipa-pta -freorder-blocks-and-partition -fmerge-all-constants -floop-unroll-and-jam -fno-strict-overflow -fno-tree-loop-distribute-patterns -ffast-math -falign-functions=32 -falign-labels=8 -falign-loops=32 -freorder-blocks -fweb -fno-stack-protector -finline-functions -funroll-loops -L/usr/local/lib -DX86_ARCH")
+        set(CMAKE_CXX_FLAGS_RELEASE "-pipe -w -Ofast -flto=auto -ffat-lto-objects \
+        -funroll-loops -fgcse-after-reload -frename-registers \
+        -fipa-cp-clone -fwhole-program -fstrict-aliasing \
+        -fstrict-overflow -finline-limit=1000 -freorder-blocks-and-partition \
+        -fsplit-loops -fpredictive-commoning -fgcse-las \
+        -fdelete-null-pointer-checks -fhoist-adjacent-loads \
+        -fmerge-constants -fivopts -floop-interchange \
+        -floop-strip-mine -floop-block -floop-unroll-and-jam \
+        -fpeel-loops -fprefetch-loop-arrays -fauto-profile \
+        -fprofile-use -fprofile-correction -foptimize-sibling-calls \
+        -foptimize-strlen -freorder-functions -freorder-blocks \
+        -ftracer -fweb -fipa-ra -fipa-cp \
+        -fipa-pta -fipa-icf -fdevirtualize-speculatively \
+        -fipa-devirt -fsched-spec -fsched-pressure \
+        -fsched-last-insn-heuristic -fsched-rank-heuristic \
+        -fsched-group-heuristic -fsched-dep-count-heuristic \
+        -fmodulo-sched -fmodulo-sched-allow-regmoves \
+        -fbranch-target-load-optimize2 -fcx-limited-range \
+        -funsafe-math-optimizations -ffinite-math-only \
+        -fno-trapping-math -ffp-contract=fast -fno-rounding-math \
+        -fno-signaling-nans -march=native -mtune=native \
+        -mfma -msse4.2 -mpopcnt -mavx2 -flax-vector-conversions \
+        -Wall -Wextra -Wpedantic -Wno-unused-parameter \
+        -Wno-unused-variable -Wno-unused-function -Wno-unused-result \
+        -Wno-sign-compare -Wno-unused-but-set-variable -Wno-maybe-uninitialized \
+        -Wno-strict-overflow -Wno-array-bounds -Wno-address-of-packed-member \
+        -Wno-aggregate-return -Wno-attributes -Wno-unused-but-set-label \
+        -Wno-unused-value -Wno-ignored-qualifiers -Wno-psabi -Wno-error \
+        -Wl,--strip-all -Wl,--gc-sections -fuse-ld=gold \
+        -L/usr/local/lib -DX86_ARCH")
         message("Release mode for x86:${CMAKE_CXX_FLAGS_RELEASE}")
     else()
         message(FATAL_ERROR "Unsupported architecture")
