--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,7 @@ set(FOO_USE_STATIC_LIBS ON) # 告诉CMake优先使用静态库
 #find_package(PkgConfig REQUIRED)
 # Find required protobuf package
 
-#[[find_package(Protobuf REQUIRED)
+find_package(Protobuf REQUIRED)
 if (PROTOBUF_FOUND)
     message(STATUS "protobuf library found")
 else ()
@@ -116,7 +116,7 @@ include_directories(${Protobuf_INCLUDE_DIRS})
 
 add_subdirectory(proto)
 include_directories(${PROTO_GEN_C_INCLUDE_DIRS}) # c
-include_directories(${PROTO_GEN_CXX_INCLUDE_DIRS}) # cpp]]
+include_directories(${PROTO_GEN_CXX_INCLUDE_DIRS}) # cpp
 
 #[[set(MODEL_SOURCES
         models/XxlJobGroup.h  models/XxlJobGroup.cc
@@ -170,7 +170,7 @@ FetchContent_MakeAvailable(glaze)
 find_package(Drogon CONFIG REQUIRED)
 find_package(mimalloc 2.1.7 REQUIRED)
 find_package(Boost 1.85.0 REQUIRED)
-target_link_libraries(${PROJECT_NAME} PRIVATE Drogon::Drogon Boost::boost glaze::glaze mimalloc #[[proto_gen_cxx]])
+target_link_libraries(${PROJECT_NAME} PRIVATE Drogon::Drogon Boost::boost glaze::glaze mimalloc proto_gen_cxx)
 
 # ##############################################################################
 
